--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1696,7 +1696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** The northern hemisphere has a strong negative correlation with the maximum temperature across the dataset, while the southern hemisphere has a strong positive correlation with the maximum temperature across the dataset. In other words, the closer to the latitude gets to 0, which is the equator, the higher the maximum temperature gets."
+    "**Discussion about the linear relationship:** The northern hemisphere has a strong negative correlation (r-value = -0.8) with the maximum temperature across the dataset, while the southern hemisphere has a strong positive correlation  (r-value = 0.7) with the maximum temperature across the dataset. In other words, the closer to the latitude gets to 0, we see the higher the maximum temperature gets."
    ]
   },
   {
@@ -1774,7 +1774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** The northern hemisphere has a moderate, positive correlation between the latitude and the level of humidity while the southern hemisphere has a very weak, postive correlation between the latitude and the huidity levels. That is, it shows more strongly for the northern hemisphere that the closer the latitude gets to 0, the more humid the area could be. The southern hemisphere almost has no correlation between the latitude level and the humidity levels. "
+    "**Discussion about the linear relationship:** The northern hemisphere has a weak positive correlation (r-value = 0.1) between the latitude and the level of humidity while the southern hemisphere has a very weak, positive correlation (r-value = -0.09) between the latitude and the humidity levels. That is, it shows more strongly for the northern hemisphere that the closer the latitude gets to 0, the more humid the area could be. The southern hemisphere almost has no correlation between the latitude level and the humidity levels."
    ]
   },
   {
@@ -1852,7 +1852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** Both the northern and southern hemispheres show a very weak, positive correlation between the latitude and cloudiness level. That is, there is little to no relationship between the likelihood of it being cloudy when looking at the latitude."
+    "**Discussion about the linear relationship:** Both the northern hemisphere shows a very weak, positive correlation (r-value = 0.1), as does the southern hemisphere (r-value = 0.1), between the latitude and cloudiness level. That is, there is little to no relationship between the likelihood of it being cloudy when looking at the latitude."
    ]
   },
   {
@@ -1930,7 +1930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** In the nothern hemisphere, there is a moderate, but still quite weak, correlation between the latitude and wind speed levels. In the southern hemisphere, there is a moderate correlation between latitude and wind speed levels. "
+    "**Discussion about the linear relationship:** In the nothern hemisphere weak correlation (r-value = 0.2) between the latitude and wind speed levels. In the southern hemisphere, there is a weak negative correlation (r-value = -0.1) between latitude and wind speed levels."
    ]
   },
   {
